--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Ace_Invoice</groupId>
-  <artifactId>Test</artifactId>
+  <groupId>DataDriven</groupId>
+  <artifactId>DataDrivenTesting</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Test</name>
+  <name>DataDrivenTesting</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -15,6 +15,7 @@
   </properties>
 
   <dependencies>
+    
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
@@ -28,13 +29,5 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>3.17</version>
-</dependency>
-
-    
   </dependencies>
 </project>
