--- a/.classpath
+++ b/.classpath
@@ -16,6 +16,18 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/curvesapi-1.04.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-examples-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-excelant-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-ooxml-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-ooxml-schemas-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/poi-scratchpad-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="D:/Apache_POI/poi-3.17-beta1/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
